--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "sequelize": "^6.25.3",
     "sequelize-cli": "^6.5.1"
   },
